--- a/blaze-ex1/Shared/NavMenu.razor
+++ b/blaze-ex1/Shared/NavMenu.razor
@@ -14,12 +14,12 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="TvShows">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                <span class="oi oi-plus" aria-hidden="true"></span> Tv Shows
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="ToWatch">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> To Watch
             </NavLink>
         </li>
     </ul>
