added working bunit tests

--- a/blaze-ex1/Pages/TvSearch.razor
+++ b/blaze-ex1/Pages/TvSearch.razor
@@ -46,7 +46,7 @@ else
 
 
 @code{
-    private String show = "breaking bad";
+    public String show = "breaking bad";
     private bool found;
 
     private Root data;
