--- a/blaze-ex1/Pages/TvSearch.razor
+++ b/blaze-ex1/Pages/TvSearch.razor
@@ -13,7 +13,7 @@
 else
 {
     <div>
-        <label for="show">Showw</label>
+        <label for="show">Show</label>
         <input id="show" @bind="show">
         <p></p>
     </div>
